--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -65,34 +65,40 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:gravity="center">
 
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                <ImageButton
                     android:id="@+id/floating_action_button1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    app:srcCompat="@drawable/ic_credit_card_black_24dp" />
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="16dp"
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:background="@drawable/ripple_oval"
+                    android:elevation="8dp"
+                    android:src="@drawable/ic_monetization_on_black_56dp" />
+
+                <ImageButton
                     android:id="@+id/floating_action_button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    app:srcCompat="@drawable/ic_credit_card_black_24dp" />
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="16dp"
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:background="@drawable/ripple_oval"
+                    android:elevation="8dp"
+                    android:src="@drawable/ic_local_atm_black_56dp" />
+
+                <ImageButton
                     android:id="@+id/floating_action_button3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    app:srcCompat="@drawable/ic_credit_card_black_24dp" />
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginRight="16dp"
 
+                    android:background="@drawable/ripple_oval"
+                    android:elevation="8dp"
+                    android:src="@drawable/ic_code_black_56dp" />
 
             </LinearLayout>
 
@@ -107,12 +113,13 @@
                     android:id="@+id/tituloMisMovimientos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="false"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName"
-                    android:text="Mis Movimientos"
-                    android:textColor="#FFFFFF"
 
-                    />
+                    android:text="Mis Movimientos"
+                    android:textColor="#FFFFFF" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/movementsRecyclerView"
