--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -9,10 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:fontFamily="@font/hind_guntur_medium"
+
+        android:textColor="#FFFFFF"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/movimientosText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/hind_guntur_medium"
+        android:textColor="#FFFFFF"
         android:text="TextView" />
 </LinearLayout>
