--- a/app/src/main/res/layout/micuenta.xml
+++ b/app/src/main/res/layout/micuenta.xml
@@ -66,7 +66,7 @@
             <LinearLayout
                 android:id="@+id/botommenu"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="245dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/bordes_all_shape"
@@ -88,7 +88,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/creditCardsRecyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="130dp" />
 
                 <Button
                     android:id="@+id/accountAddCard2"
